[gd_scene load_steps=20 format=3 uid="uid://c6pk453aluqvu"]

[ext_resource type="Script" path="res://Scenes/First_World/FinalWin.gd" id="1_aje0u"]
[ext_resource type="PackedScene" uid="uid://cwf00dp177g4j" path="res://Art/3DModel/lifeplace.gltf" id="2_jw1cn"]
[ext_resource type="PackedScene" uid="uid://cpduu6l1x4e3l" path="res://Scenes/FindItem/find_object.tscn" id="2_x1wra"]
[ext_resource type="AudioStream" uid="uid://c8pxyo87gn858" path="res://Sounds/click-menu-app-147357.mp3" id="4_7v7bd"]
[ext_resource type="Texture2D" uid="uid://ddkt0ft32h0j5" path="res://Art/2DArt/FROG.png" id="5_qmfkx"]
[ext_resource type="Texture2D" uid="uid://dw1gca24bo016" path="res://Art/2DArt/redFROG.png" id="6_wjd41"]
[ext_resource type="Texture2D" uid="uid://bayns8gnejk0i" path="res://Art/2DArt/pinkFROG.png" id="7_i434i"]
[ext_resource type="Texture2D" uid="uid://b15olp1efeeng" path="res://Art/2DArt/grayfrogFROG.png" id="8_tb2ib"]
[ext_resource type="Texture2D" uid="uid://dmo4gropuejeo" path="res://Art/2DArt/demo02_PixelSky.png" id="9_1fgrh"]
[ext_resource type="AudioStream" uid="uid://bo6uk8xg7saml" path="res://Sounds/game-music-loop-7-145285.mp3" id="10_woyri"]
[ext_resource type="PackedScene" uid="uid://bjyqhjj08y8fo" path="res://Art/2DModels/Object_402.gltf" id="11_s66s4"]
[ext_resource type="PackedScene" uid="uid://gafqurofr4r6" path="res://Art/2DModels/Object_423.gltf" id="12_cinpj"]
[ext_resource type="PackedScene" uid="uid://b8ryvkm7wj2xs" path="res://Art/2DModels/Object_480.gltf" id="13_3r02u"]
[ext_resource type="PackedScene" uid="uid://brufm4014xl2x" path="res://Art/2DModels/sun_flower.gltf" id="14_8mqmb"]
[ext_resource type="PackedScene" uid="uid://dm5nmsm1fffc0" path="res://Art/2DModels/red_mushroom.gltf" id="15_ey7sp"]
[ext_resource type="PackedScene" uid="uid://b8fmcu1rl42ve" path="res://Scenes/Ui/Final_win_panel.tscn" id="16_71wi3"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_gmo4p"]
panorama = ExtResource("9_1fgrh")
filter = false

[sub_resource type="Sky" id="Sky_e3io6"]
sky_material = SubResource("PanoramaSkyMaterial_gmo4p")
process_mode = 1

[sub_resource type="Environment" id="Environment_lxhly"]
background_mode = 2
sky = SubResource("Sky_e3io6")
volumetric_fog_density = 0.205
volumetric_fog_emission_energy = 635.88
volumetric_fog_gi_inject = 5.35
volumetric_fog_detail_spread = 5.04538

[node name="FinalWin" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0154345, 0, -0.00332224)
script = ExtResource("1_aje0u")

[node name="Frog" parent="." instance=ExtResource("2_x1wra")]
transform = Transform3D(3, 0, 0, 0, 3.058, 0, 0, 0, 0.461, 0, 0.366733, 0)
Name = "Blue frog"

[node name="default2" parent="." instance=ExtResource("2_jw1cn")]

[node name="Main_Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.838671, 0.544639, 0, -0.544639, 0.838671, -0.287678, 1.89931, 2.61174)
current = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Main_Camera"]
stream = ExtResource("4_7v7bd")
volume_db = 0.35
pitch_scale = 2.0

[node name="Frog2" parent="." instance=ExtResource("2_x1wra")]
transform = Transform3D(2.30498, 0, 0.295066, 0, 3.058, 0, -1.92017, 0, 0.354199, -0.857308, 0.333979, 0.038456)
texture = ExtResource("5_qmfkx")
Name = "Blue frog"

[node name="Frog3" parent="." instance=ExtResource("2_x1wra")]
transform = Transform3D(2.92285, 0, -0.103874, 0, 3.058, 0, 0.675971, 0, 0.449145, 0.941345, 0.333979, 0.038456)
texture = ExtResource("6_wjd41")
Name = "Blue frog"

[node name="Frog4" parent="." instance=ExtResource("2_x1wra")]
transform = Transform3D(2.96163, 0, 0.0734914, 0, 3.058, 0, -0.478252, 0, 0.455104, -0.477435, 0.333979, 0.038456)
texture = ExtResource("7_i434i")
Name = "Blue frog"

[node name="Frog5" parent="." instance=ExtResource("2_x1wra")]
transform = Transform3D(2.96163, 0, 0.0734914, 0, 3.058, 0, -0.478252, 0, 0.455104, 0.400017, 0.333979, 0.038456)
texture = ExtResource("8_tb2ib")
Name = "Blue frog"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lxhly")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_woyri")
volume_db = -10.0
autoplay = true

[node name="default" parent="." instance=ExtResource("11_s66s4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.120095, -0.954629, -1.73375)

[node name="default3" parent="." instance=ExtResource("12_cinpj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.00765, -2.12472, -1.44975)

[node name="default4" parent="." instance=ExtResource("13_3r02u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.200544, 0, -1.82091)

[node name="default5" parent="." instance=ExtResource("14_8mqmb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.666921, 0, -0.755375)

[node name="default6" parent="." instance=ExtResource("14_8mqmb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.351755, 0, -0.600503)

[node name="default7" parent="." instance=ExtResource("14_8mqmb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.68506, 0, -0.706089)

[node name="default8" parent="." instance=ExtResource("14_8mqmb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.00132, 0, -1.89239)

[node name="default9" parent="." instance=ExtResource("14_8mqmb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.24752, 0, -1.94391)

[node name="default10" parent="." instance=ExtResource("14_8mqmb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.2258, 0, -3.44494)

[node name="default11" parent="." instance=ExtResource("14_8mqmb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.636445, 0, -1.56938)

[node name="default12" parent="." instance=ExtResource("15_ey7sp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.657076, 0, -0.5805)

[node name="win_panel" parent="." instance=ExtResource("16_71wi3")]
